--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- SCRIPT VIEJO game.js -->
+
+    <!-- <canvas id="canvas"></canvas>
+    <script src="game.js"></script> -->
+
+    <!-- SCRIPT VIEJO game.js -->
+
+    <!-- SCRIPT NUEVO cartas.js-->
     <canvas id="canvas"></canvas>
-    <script src="game.js"></script>
+    <script src="js/cartas.js"></script>
+
 </body>
 </html>
